MapperProfile ordered in methods, Error page modified to look better, Chat page overflow bugfixes, Startup modified to work with the error page in case of error codes

--- a/OurTrace.App/wwwroot/css/style.css
+++ b/OurTrace.App/wwwroot/css/style.css
@@ -4673,6 +4673,7 @@ a:hover {
 .messages-list ul {
 	float: left;
 	width: 100%;
+	max-height: 600px;
 }
 .messages-list ul li {
 	float: left;
